@@ -8,11 +8,11 @@ Uploaders: Steffen Moeller <moeller@debian.org>,
  Daniel Hahler <ubuntu@thequod.de>,
  Gianfranco Costamagna <costamagnagianfranco@yahoo.it>
 Standards-Version: 3.9.4
-Build-Depends: debhelper (>= 7.0.50~), po-debconf, pkg-config (>= 0.15),
+Build-Depends: debhelper, po-debconf, pkg-config,
  dpkg-dev (>= 1.16.1.1),
- libtool, autoconf (>= 2.59), autotools-dev, automake1.9 (>= 1.9.3), gettext,
+ libtool, autoconf, autotools-dev, automake1.9, gettext,
  docbook2x, docbook-xml, libxml2-utils,
- zlib1g-dev, libssl-dev, libcurl4-openssl-dev (>= 7.17.1),
+ zlib1g-dev, libssl-dev, libcurl4-openssl-dev,
  libsm-dev, libice-dev, libxmu-dev, libxi-dev, libx11-dev, libnotify-dev (>= 0.7.0),
  freeglut3-dev, libwxgtk2.8-dev, libgtk2.0-dev,
  libsqlite3-dev, libmysqlclient-dev, python, libfcgi-dev, libjpeg-dev,
